[project]
name = "comfyui-erenodes"
description = "A collection of prompt managent nodes with advanced tag parsing. Prompt tag cloud, mutiselect, toggle list, randomizer, filter, autocompete."
version = "2.1.2"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Erehr/ComfyUI-EreNodes"

[tool.comfy]
PublisherId = "erehr"
DisplayName = "ComfyUI-EreNodes" 
Icon = ""